2001-08-31  Akim Demaille  <akim@epita.fr>

	* lib/Autom4te/General.pm ($version, $help, &getopt): New.
	* bin/autoupdate.in, bin/autoheader.in, bin/autom4te.in: Use them.
	* bin/autom4te.in ($autoconf): Pass --force.
	`print $out' doesn't print `$_' but `$out'.
	* tests/tools.at (Syntax of the Perl scripts): Pass the lib dir.
	(autoheader): Pass --force since the test suite goes too fast for
	the time stamps.
	Adjust to the new autoheader messages.

2001-08-31  Akim Demaille  <akim@epita.fr>

	* bin/autoheader.in: Handle the acconfig.h etc. junk files.
	Check the completeness of the #template.
	* lib/Autom4te/General.pm (&update_file): s/remove/unlink/.
	* tests/semantics.at (AC_C_BIGENDIAN): Adjust AT_CHECK_AUTOHEADER
	invocation.

2001-08-31  Akim Demaille  <akim@epita.fr>

	* lib/Autom4te/General.pm (&find_file, &update_file): New.
	* bin/autoupdate.in, bin/autoheader.in: Adjust.
	Drop AC_MACRODIR dead for real.
	* tests/atspecific.m4 (AT_CHECK_AUTOHEADER): Now autoheader says
	`autoheader: `config.hin' is created'.
	* tests/tools.at (Syntax of the Perl scripts): Check autoheader.

2001-08-31  Akim Demaille  <akim@epita.fr>

	* bin/autoheader.in: Rewrite in Perl.
	* tests/autoheader: Adjust.

2001-08-31  Akim Demaille  <akim@epita.fr>

	* bin/autoconf.in (--include, -I): New option.
	Map --localdir, --autoconf-dir onto it.
	Forward autom4te's options instead of interpreting them.
	* bin/autoconf.in, bin/autoheader.in (AC_MACRODIR, autoconf_dir):
	There is no such envvar since the inception of autom4te.cfg.
	* bin/autom4te.in (&parse_args): Uniquify `@include'.
	* bin/autoupdate.in: Adjust, and perform more control.
	* tests/atspecific.m4 (AT_CHECK_AUTOCONF): Adjust.
	* tests/autoconf: Dittowise.

	
2001-08-31  Akim Demaille  <akim@epita.fr>

	* bin/autoconf.in: Don't bother with `acsite.m4' and `aclocal.m4'.
	* bin/autom4te.in (&find_file): Support `FILE?' standing for
	optionally `FILE'.
	Use -e, not -f, since /dev/null for instance is OK.